# MicroFlow

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_OVERVIEW.md  README.md  ersadminAppDataLocalProgramsTrae CNresourcesappoutvsworkbenchcontribterminalcommonscriptssafe_rm_aliases.ps1 } catch{} ; Write-Output [Trae CN] Safe Rm alias is not enabled, try to fix it now.
.github/workflows/: ci.yml  release.yml
abi/: Cargo.toml
abi/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/engine/: state_machine.rs  test_state_machine.rs
core/src/ffi/: abi.rs  error.rs  lora.rs  mod.rs  types.rs  wrapper.rs
core/src/model/: lora_loader.rs  mod.rs
core/src/parameter/: connection.rs  dynamic_port.rs  mod.rs  test_parameter.rs
core/src/python_library/: mod.rs
core/src/types/: data_type.rs  data_value.rs  mod.rs  test_data_value.rs
core/src/vram/: pool.rs  test_pool.rs
core/src/workflow/: context.rs  executor.rs  mod.rs  serialization.rs  validator.rs
core/src/workflow/nodes/: input.rs  llm.rs  lora_switch.rs  mod.rs  output.rs
desktop/: Cargo.toml
desktop/src/: lib.rs
distributed/: Cargo.toml
distributed/src/: lib.rs
nodes/: Cargo.toml
nodes/src/: lib.rs
python_runtime/: Cargo.toml
python_runtime/python/: client.py  microflow_runtime.py
python_runtime/src/: executor.rs  lib.rs  manager.rs  protocol.rs  server.rs
scripts/: setup_dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/web/: index.html  package-lock.json  package.json
tauri-app/web/src/: App.css  App.tsx  FlowCanvas.tsx
tauri-app/web/src/components/: FlowCanvas.tsx  PropertyPanel.tsx  PythonLibraryPanel.tsx
tauri-app/web/src/services/: api.ts  api.tsx
tauri-app/web/src/store/: workflowStore.ts
ui/: index.html  package.json
ui/src/: Flow.tsx  main.tsx
ui/src/nodes/: InputNode.tsx  LLMNode.tsx  OutputNode.tsx
