[workspace]
members = ["abi", "core", "nodes", "python_runtime", "desktop", "cli", "distributed"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "process"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0-beta", features = [] }
llama-cpp-rs = "0.3"
dashmap = "5.5"
arc-swap = "1.7"
proptest = "1.4"
criterion = "0.5"
landlock = "0.2"
seccomp = "0.3"