[workspace]
members = ["core", "abi", "python_runtime", "nodes"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "process"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

llama_cpp_rs = "0.3"
dashmap = "5.5"
arc-swap = "1.7"
proptest = "1.4"
criterion = "0.5"
landlock = "0.2"
seccomp = "0.3"
home = "<=0.5.9"