[package]
name = "microflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
llama-cpp-rs = { version = "0.3", features = ["cuda"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1