[package]
name = "microflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
llama_cpp_rs = { version = "0.3", default-features = false, optional = true }
thiserror = "1.0"
base64 = "0.21"
tracing = "0.1"

[features]
default = []  # 默认不包含 llama
llama = ["llama_cpp_rs"]  # 启用 llama 支持

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1