[package]
name = "microflow-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MicroFlow desktop application"
license = "MIT"
repository = "https://github.com/yourusername/microflow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = "2.0.0"
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]