[package]
name = "microflow-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# 链接核心库
microflow-core = { path = "../../core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
