[package]
name = "microflow-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true, features = ["wry"] }
tauri-plugin-dialog = { workspace = true }
microflow-core = { path = "../../core" }
dirs = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
